--- a/config.json
+++ b/config.json
@@ -1,9 +1,11 @@
 {
     "database": {
-        "host": "sezercanpostgres3.postgres.database.azure.com",
+        "host": "mertpostgres1.postgres.database.azure.com",
         "dbname": "postgres",
-        "user": "usrsezer@SezercanPostgres3",
-        "password": "Sezercan123*",
+        "user": "mertalper97",
+        "password": "Mert123",
         "ssl": "require"
     }
+
+
 }
